--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -47,7 +47,7 @@ $perfiles = $usuario->getUserPerfilTemp();
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <?php echo $this->headMeta()->appendHttpEquiv('Content-Type','text/html; charset=UTF-8')->appendHttpEquiv('Content-Language', 'es-AR')?>
-<?php echo $this->headTitle('GSeguros')?>
+<?php echo $this->headTitle('Fenix Seguros')?>
 <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/x-icon','href' => '/images/favicon.ico'),'PREPEND')
 /*
  *  Todo lo que esta en /css/ *.css lo uno para hacer un solo request
