--- a/application/modules/poliza/views/scripts/solicitud/alta-automotores.phtml
+++ b/application/modules/poliza/views/scripts/solicitud/alta-automotores.phtml
@@ -701,6 +701,13 @@ function getFrameByName(name) {
 			<input type='submit' name='confirmar_solicitud_automotor'
 				id='confirmar_solicitud_automotor' value='Aprobar Solicitud y Crear Poliza'
 				onClick="return false"> </input> 
+
+
+
+			<input type='submit'
+				name='enviar_compania_solicitud_automotores' id='enviar_compania_solicitud_automotores'
+				value='Enviar Solicitud Compania' onClick="return false" />
+					
 			
 				<?endif;
 				break;
